resources/insights-stage/cloudigrade-stage/cloudigrade-stage-azure-offer-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cloudigrade-stage-azure-offer
spec:
  path: /api/cloudigrade/v2/azure-offer-template/
  to:
    kind: Service
    name: cloudigrade-api
    weight: 100
  port:
    targetPort: public
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
